# MIDI-File-Examiner

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  create_app.py  gs_drumkits.csv  gs_instruments.csv  midi_examiner.py  midi_examiner_gui.py  midi_patches_db.py  pyproject.toml  requirements.txt
